--- a/WebApplicationRdn/packages.config
+++ b/WebApplicationRdn/packages.config
@@ -24,6 +24,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.5.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net451" />
+  <package id="R.NET.Community" version="1.5.16" targetFramework="net451" />
+  <package id="R.NET.Community.Graphics" version="0.1.2-alpha" targetFramework="net451" />
   <package id="Svg" version="1.7.0" targetFramework="net451" />
   <package id="WebGrease" version="1.1.0" targetFramework="net451" />
 </packages>
